# SlaughteringAlarmPLC

./: Alarms.csv  CMakeLists.txt  Main.qml  alarmactiveitem.cpp  alarmactiveitem.h  alarmconfigitem.cpp  alarmconfigitem.h  alarmhistoryitem.cpp  alarmhistoryitem.h  alarmhistorylistmodel.cpp  alarmhistorylistmodel.h  alarmlistmodel.cpp  alarmlistmodel.h  alarmsconfig.cpp  alarmsconfig.h  main.cpp  plc_siemens.cpp  plc_siemens.h  snap7.cpp  snap7.h  wifistatus.cpp  wifistatus.h
libarm/: crosscompile.mk
